# DIM_LANGUAGE

./: CMakeLists.txt
DIM_LANGUAGE/: CMakeLists.txt
DIM_LANGUAGE/Configuration/: config.h
DIM_LANGUAGE/Error/: error.h
DIM_LANGUAGE/Interpreter/: interpreter.cpp  interpreter.h
DIM_LANGUAGE/LIBS/standart/: standart.cpp  standart.h
DIM_LANGUAGE/Lexer/: lexer.cpp  lexer.h
DIM_LANGUAGE/Parser/: parser.cpp  parser.h
DIM_LANGUAGE/Tokens/: tokens.h
DIM_LANGUAGE/WorkSpace/: main.dim
RUN/: CMakeLists.txt  release.cpp  release.h
